examples/test/testpolicy8604.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8604
  namespace: namespace39
spec:
  podSelector:
    matchLabels:
      key37: value18
      key6: value11
      key8: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value24
      podSelector:
        matchLabels:
          key26: value36
